# pvr.iptvsimple

./: CMakeLists.txt  FindPugixml.cmake  README.md  appveyor.yml
debian/: control
depends/common/pugixml/: CMakeLists.txt  pugixml.txt
pvr.iptvsimple/: addon.xml.in  changelog.txt
pvr.iptvsimple/resources/: settings.xml
pvr.iptvsimple/resources/language/resource.language.en_gb/: strings.po
src/: PVRIptvData.cpp  PVRIptvData.h  client.cpp  client.h
src/iptvsimple/: CatchupController.cpp  CatchupController.h  ChannelGroups.cpp  ChannelGroups.h  Channels.cpp  Channels.h  Epg.cpp  Epg.h  Media.cpp  Media.h  PlaylistLoader.cpp  PlaylistLoader.h  Providers.cpp  Settings.cpp  Settings.h  StreamManager.cpp  StreamManager.h
src/iptvsimple/data/: Channel.cpp  Channel.h  ChannelEpg.cpp  ChannelEpg.h  ChannelGroup.cpp  ChannelGroup.h  EpgEntry.cpp  EpgEntry.h  EpgGenre.cpp  EpgGenre.h  MediaEntry.cpp  MediaEntry.h  Provider.cpp  Provider.h
src/iptvsimple/utilities/: FileUtils.cpp  FileUtils.h  StreamUtils.cpp  StreamUtils.h  WebUtils.cpp  WebUtils.h  XMLUtils.h
